# bcusdk

./: .gitignore  AUTHORS  Makefile.am  README  bcusdk.spec  configure.ac  configure.in
archive/: Makefile.am  embedprogid.cpp  extractprogid.cpp  hex.cpp  hex.h
bcu/: Makefile.am  VARIANT  addmissing.sh
bcu/include/: Makefile.am  bcu_0012.h  bcu_0012.inc  bcu_0020.h  bcu_0020.inc  bcu_common.h  bcu_common.inc  bcu_funcs.h  grouptypes.h  proptypes.h  types.h
bcu/ldscripts/: Makefile.am  bcu_0012.link  bcu_0020.link  bcu_0020histack.link  genload.link
bcu/lib/: .cvsignore  Makefile.am  bcu1func.s  bcu2func.s  eewrite.c  fp.s  initbcu1.s  initbcu2.s  regs.s  tmp.s  tmpspace.s
bcugen/: Makefile.am  bcugen1.cpp  bcugen2.cpp  bcugen3.cpp  imageedit.cpp  loadimage.cpp  viewimage.cpp
bcugen/configfile/: Makefile.am  class_gen.h  class_init.h  class_init_ci.cpp  class_init_ci.h  parser.pre  parser1.pre  parser2.pre  parser_gentoken.h  parser_genunion.h  parser_objectdesc.h  readconfig.cpp  readconfig.h  scanner.pre  scanner_gen.h  write_gen.h
bcugen/lib/: Makefile.am  addrtab.cpp  addrtab.h  check.cpp  check.h  classes.cpp  classes.h  common.cpp  common.h  expr.cpp  expr.h  gencode.cpp  gencode.h  map.cpp  map.h  regexp.cpp  regexp.h  scanner.h  symboltab.cpp  symboltab.h  write.cpp  write.h  xmlreadconfig.cpp  xmlreadconfig.h  xmlwriteappinfo.cpp  xmlwriteappinfo.h
bcugen/struct/: BCUType.lst  DPT.lst  Debounce.def  Device.def  FloatParameter.def  FunctionalBlock.def  GroupObject.def  GroupObjectType.lst  IntParameter.def  Interface.def  ListParameter.def  Makefile.am  Object.def  Objects.lst  PollingMaster.def  PollingSlave.def  Property.def  PropertyID.lst  PropertyType.lst  StringParameter.def  Timer.def  TimerResType.lst  TimerType.lst
common/: Makefile.am  array.h  eibloadresult.h  image.cpp  image.h  libstdc.h  loadctl.h  loadimage.cpp  loadimage.h  my_strings.h  stack.h  strings.h  types.h
contrib/: Makefile.am  README
contrib/eibdvis/: README  common.php  elements.php  (+6 more)
debian/: Makefile.am  bcusdk-build.install  changelog  control  copyright  eibd-clients.install  eibd-server.install  libeibclient-dev.install  rules
eibd/: Makefile.am
eibd/backend/: Makefile.am  bcu1.cpp  bcu1.h  bcu1serial.cpp  bcu1serial.h  eibnetip.cpp  eibnetip.h  eibnetrouter.cpp  eibnetrouter.h  eibnettunnel.cpp  eibnettunnel.h  ft12.cpp  ft12.h  lowlatency.cpp  lowlatency.h  tpuart.cpp  tpuart.h  tpuartserial.cpp  tpuartserial.h  usbif.cpp  usbif.h
eibd/bcu/: Makefile.am  addrtab.cpp  addrtab.h  bcuaddrtab.cpp  bcuread.cpp  l-FT12.h  l-PEI16.h  l-PEI16s.h  l-USB.h  lowlevelconf.h  lowlevelcreate.h
eibd/client/: Makefile.am  close.c  closesync.c  complete.c  eibclient-int.h  eibclient.c  getapdu.c  getapdusrc.c  getbusmonitorpacket.c  getgroupsrc.c  groupcacheclear.c  groupcachedisable.c  groupcacheenable.c  groupcacheread.c  groupcachereadsync.c  groupcacheremove.c  io.c  loadimage.c  mcauthorize.c  mcconnect.c  mcgetmaskversion.c  mcgetpeitype.c  mcprogmodeoff.c  mcprogmodeon.c  mcprogmodestatus.c  mcprogmodetoggle.c  mcpropertydesc.c  mcpropertyread.c  mcpropertyscan.c  mcpropertywrite.c  mcread.c  mcreadadc.c  mcrestart.c  mcsetkey.c  mcwrite.c  mcwriteplain.c  mgetmaskversion.c  mprogmodeoff.c  mprogmodeon.c  mprogmodestatus.c  (+22 more)
eibd/client/c/: Makefile.am  close.c  closesync.c  complete.c  eibclient-int.h  io.c  openlocal.c  openremote.c  openurl.c  pollcomplete.c  pollfd.c
eibd/client/cs/: EIBConnection.pre  Makefile.am  arg.def  complete.inc  def.def  errno.inc  help.inc  io.inc  lic.inc
eibd/client/def/: Makefile.am  all.lst  getapdu.inc  getapdusrc.inc  getbusmonitorpacket.inc  getgroupsrc.inc  gettpdu.inc  groupcacheclear.inc  groupcachedisable.inc  groupcacheenable.inc  groupcachelastupdates.inc  groupcacheread.inc  groupcachereadsync.inc  groupcacheremove.inc  karg.def  loadimage.inc  mcauthorize.inc  mcconnect.inc  mcgetmaskversion.inc  mcgetpeitype.inc  mcindividual.inc  mcprogmodeoff.inc  mcprogmodeon.inc  mcprogmodestatus.inc  mcprogmodetoggle.inc  mcpropertydesc.inc  mcpropertyread.inc  mcpropertyscan.inc  mcpropertywrite.inc  mcread.inc  mcreadadc.inc  mcrestart.inc  mcsetkey.inc  mcwrite.inc  mcwriteplain.inc  mgetmaskversion.inc  mprogmodeoff.inc  mprogmodeon.inc  mprogmodestatus.inc  mprogmodetoggle.inc  (+16 more)
eibd/client/java/: EIBConnection.pre  Makefile.am  arg.def  complete.inc  def.def  errno.inc  io.inc  lic.inc
eibd/client/java/tuwien/auto/eibclient/: Buffer.java  EIBAddr.java  Int16.java  Int32.java  Int8.java
eibd/client/pascal/: Makefile.am  arg.def  body1.inc  def.def  gen.c  genh.c  hdef.def  header1.inc
eibd/client/perl/: EIBConnection.pre  Makefile.am  arg.def  complete.inc  def.def  help.inc  io.inc  lic.inc
eibd/client/php/: EIBConnection.pre  Makefile.am  arg.def  class.def  complete.inc  def.def  errno.inc  help.inc  io.inc  lic.inc
eibd/client/python/: Makefile.am  arg.def  def.def  gen.c  io.inc
eibd/eibnet/: Makefile.am  eibnetdescribe.cpp  eibnetsearch.cpp
eibd/examples/: .gitignore  Makefile.am  busmonitor1.c  busmonitor2.c  common.c  common.h  groupcacheclear.c  groupcachedisable.c  groupcacheenable.c  groupcachelastupdates.c  groupcacheread.c  groupcachereadsync.c  groupcacheremove.c  grouplisten.c  groupread.c  groupreadresponse.c  groupresponse.c  groupsocketlisten.c  groupsocketread.c  groupsocketswrite.c  groupsocketwrite.c  groupsresponse.c  groupswrite.c  groupwrite.c  knxtool.c  madcread.c  maskver.c  mmaskver.c  mpeitype.c  mprogmodeoff.c  mprogmodeon.c  mprogmodestatus.c  mprogmodetoggle.c  mpropdesc.c  mpropread.c  mpropscan.c  mpropscanpoll.c  mpropwrite.c  mread.c  mrestart.c  (+14 more)
eibd/server/: EIBNETIP.h  FT12.h  Makefile.am  TPUART.h  TPUARTs.h  b-EIBNETIP.h  b-EIBNETIPTUNNEL.h  b-FT12.h  b-PEI16.h  b-PEI16s.h  b-TPUART.h  b-TPUARTs.h  b-USB.h  eibd.cpp  layer2conf.h  layer2create.h
eibd/usb/: Makefile.am  README  async.c  core.c  descriptor.c  descriptors.c  devices.c  error.c  findknxusb.cpp  io.c  libusb.h  libusbi.h  linux.c  linux.h  linux_usbfs.c  usb.c  usb.cpp  usb.h  usbi.h
m4/: compileroption.m4
(+81 files in other folders)
