LIST=GroupObjectType.lst BCUType.lst PropertyType.lst DPT.lst PropertyID.lst
STRUCT=Device.def FloatParameter.def GroupObject.def IntParameter.def Object.def PollingMaster.def Property.def \
	StringParameter.def FunctionalBlock.def Interface.def ListParameter.def Objects.lst PollingSlave.def 

dist_noinst_DATA=$(LIST) $(STRUCT) Objects.lst
