lib_LIBRARIES=libeibclient.a
AM_CPPFLAGS=-I$(top_srcdir)/eibd/include -I$(top_srcdir)/common
libeibclient_a_SOURCES=eibclient.c \
 eibclient-int.h io.c openlocal.c openremote.c openurl.c close.c \
 pollfd.c pollcomplete.c complete.c openbusmonitor.c openbusmonitortext.c \
 openvbusmonitor.c openvbusmonitortext.c getbusmonitorpacket.c \
 mcauthorize.c getapdu.c getapdusrc.c getgroupsrc.c opengroupsocket.c \
 opentbroadcast.c opentconnection.c opentgroup.c opentindividual.c \
 sendapdu.c sendgroup.c sendtpdu.c