lib_LIBRARIES=libeibclient.a
AM_CPPFLAGS=-I$(top_srcdir)/eibd/include -I$(top_srcdir)/common
libeibclient_a_SOURCES=eibclient.c \
 eibclient-int.h io.c openlocal.c openremote.c openurl.c close.c \
 pollfd.c pollcomplete.c complete.c openbusmonitor.c openbusmonitortext.c \
 openvbusmonitor.c openvbusmonitortext.c getbusmonitorpacket.c \
 mcauthorize.c getapdu.c getapdusrc.c getgroupsrc.c opengroupsocket.c \
 opentbroadcast.c opentconnection.c opentgroup.c opentindividual.c \
 sendapdu.c sendgroup.c sendtpdu.c mcconnect.c mcgetmaskversion.c \
 mcgetpeitype.c mcprogmodeoff.c mcprogmodeon.c mcprogmodestatus.c \
 mcprogmodetoggle.c mcpropertyread.c mcpropertywrite.c mcread.c \
 mcreadadc.c mcwrite.c mgetmaskversion.c mprogmodeoff.c mprogmodeon.c \
 mprogmodestatus.c mprogmodetoggle.c mreadindividualaddresses.c \
 mwriteindividualaddress.c loadimage.c mcpropertydesc.c \
 mcpropertyscan.c mcsetkey.c openttpdu.c